--- a/css/style.css
+++ b/css/style.css
@@ -78,14 +78,14 @@ body{
     width:150px;
     height:60px;
     /* background-color: red; */
-    padding-left:8px;
+    /* padding-left:8px; */
     box-sizing: border-box;
     font-size: 24px;
     text-align: center;
 }
 #time{
     float:left;
-    width:180px;
+    width:150px;
     height:60px;
     /* background-color: blue; */
     font-size: 30px;
@@ -93,7 +93,26 @@ body{
     padding-top:8px;
     box-sizing: border-box;
 }
-#menuBar img{
+#weather{
+    float:left;
+    width:100px;
+    height:60px;
+    position: relative;
+}
+#weather span{
+    position: absolute;
+    top:20px;
+    left:10px;
+}
+.weatherIcon{
+    position: absolute;
+    top:13px;
+    left:45px;
+    width:35px;
+    height:35px;
+
+}
+#topMenu{
     cursor:pointer;
     float:right;
     width:50px;
