--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,10 @@ body{
     width:100px;
     height:60px;
     position: relative;
+    cursor:pointer;
+}
+#weatherApp{
+    background-color: rgb(74, 116, 232);
 }
 #weather span{
     position: absolute;
@@ -139,7 +143,7 @@ body{
     padding-left:30px;
     box-sizing: border-box;
     position: relative;
-    z-index: 10;
+    z-index: 99;
 }
 #home_screen{
     float:left;
@@ -148,6 +152,14 @@ body{
     background-color: white;
     position: relative;
     text-align: center;
+    display:none;
+}
+#app_box{
+    float:left;
+    margin-top:40px;
+    margin-left:40px;
+    width:380px;
+    height:450px;
 }
 #logo{
     width:200px;
@@ -259,6 +271,236 @@ body{
     height:60px;
     top:130px;
 }
+/*---------------------weather-----------------------*/
+#weather_screen_background{
+    position: absolute;
+    top:140px;
+    width:460px;
+    height:640px;
+    z-index: 1;
+}
+.sunny{
+    background-image: url('../img/weatherAppBackgroundImage.jpg');
+    background-size: cover;
+}
+.snow{
+    background-image: url('../img/snowBackground.jpg');
+    background-size: cover;
+}
+.cloud{
+    background-image: url('../img/cloudBackground.jpg');
+    background-size: cover;
+}
+.rain{
+    background-image: url('../img/rainBackground.jpg');
+    background-size: cover;
+}
+.storm{
+    background-image: url('../img/stormBackground.jpg');
+    background-size: cover;
+}
+.mist{
+    background-image: url('../img/mistBacground.jpg');
+    background-size: cover;
+}
+#weather_screen{
+    position: relative;
+    float:left;
+    width:460px;
+    height:640px;
+    z-index: 10;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+#weather_head{
+    width:460px;
+    height:185px;
+    margin-top:10px;
+    position: relative;
+}
+.weatherInfo{
+    float:left;
+    width:460px;
+    text-align: center;
+    /* color:white; */
+    font-weight: bold;
+}
+#cityName{
+    height:55px;
+    font-size: 35px;
+}
+#temperature{
+    height:60px;
+    font-size: 55px;
+}
+#explain_weather{
+    height:35px;
+    font-size: 30px;
+}
+#high_low_temperature{
+    height:35px;
+    font-size: 25px;
+}
+#todayTemp{
+    float:left;
+    width:400px;
+    height:210px;
+    background-color: rgb(243, 252, 254);
+    margin-left:30px;
+    border-radius: 20px;
+    box-sizing: border-box;
+    opacity: 0.8;
+    margin-top:10px;
+}
+/* #aboutToday{
+    float:left;
+    width:400px;
+    height:60px;
+    background-color: blue;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+} */
+#temp_per_hour {
+    float: left;
+    width: 400px;
+    height: 210px;
+    border-radius: 20px;
+    box-sizing: border-box;
+}
+.tempIconImg{
+    width:40px;
+    height:40px;
+}
+/* #temp_per_hour::-webkit-scrollbar {
+    display: none;
+}  */
+.temp_per_hour_unit{
+    float:left;
+    width:57px;
+    height:210px;
+}
+.tempTime{
+    width:57px;
+    height:60px;
+    text-align: center;
+    padding-top:15px;
+    box-sizing: border-box;
+}
+.tempIcon{
+    width:57px;
+    height:70px;
+    text-align: center;
+    padding-top: 10px;
+    box-sizing: border-box;
+}
+.temp{
+    width:57px;
+    height:90px;
+    text-align: center;
+    font-size: 17px;
+    font-weight: bold;
+    padding-top:10px;
+    box-sizing: border-box;
+}
+#weekTemp{
+    float:left;
+    width:400px;
+    height:345px;
+    background-color: rgb(243, 252, 254);
+    opacity: 0.8;
+    margin-left:30px;
+    margin-top:30px;
+    border-radius: 20px;
+    overflow:hidden;
+}
+#aboutWeek{
+    float:left;
+    width:400px;
+    height:40px;
+    border-bottom: 1px solid white;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    padding-top:7px;
+    padding-left:10px;
+    box-sizing: border-box;
+}
+#weekTempBox{
+    float:left;
+    width:400px;
+    height:305px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    
+}
+.eachWeekTemp{
+    float:left;
+    width:400px;
+    height:60px;
+    font-size: 21px;
+}
+.weekTempUnit{
+    text-align: center;
+    padding-top:11px;
+    font-weight: bold;
+    box-sizing: border-box;
+    float:left;
+    height:60px;
+}
+.day{
+    width:70px;
+}
+.weekWeatherIcon{
+    width:100px;
+}
+.minTemp{
+    width:55px;
+}
+.tempGraph{
+    position: relative;
+    width:120px;
+}
+.tempGraphBack{
+    position: absolute;
+    top:25px;
+    width:120px;
+    height:10px;
+    background-color: grey;
+    opacity: 0.8;
+    /* z-index: 10; */
+}
+.tempGraphFront{
+    position: absolute;
+    height:10px;
+    background-color: rgb(244, 160, 58);
+    left:10px;
+    top:25px;
+}
+.maxTemp{
+    width:55px;
+}
+#cityList{
+    display:none;
+    position: absolute;
+    top:50px;
+    left:30px;
+    z-index: 99;
+}
+#cityList li {
+    text-align: center;
+    float:left;
+    font-size: 20px;
+    width:400px;
+    height:30px;
+    background-color: white;
+    opacity: 0.9;
+    cursor: pointer;
+}
+
+
+
+
+
+
 /*---------------------call_screen-----------------------*/
 #call_screen{
     float:left;
